--- a/coding-table-relevant.html
+++ b/coding-table-relevant.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UBM ToolsTaxonomy - Online Appendix</title>
+	<title>ChIPS Dataset - Online Appendix</title>
 </head>
 <body>
 	<table id="table">
-		<caption>UBM ToolsTaxonomy - Online Appendix</caption>
+		<caption>ChIPS Dataset - Online Appendix</caption>
 	</table>
 
 	<script type="text/javascript">/*! jQuery v1.12.4 | (c) jQuery Foundation | jquery.org/license */
